--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,4 +64,15 @@
     <!-- Black and White -->
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+    <!-- Splash Screen Colors -->
+    <color name="splash_background">#2196F3</color>
+    <color name="splash_text">#FFFFFF</color>
+    <color name="splash_text_secondary">#E3F2FD</color>
 </resources>
