--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,24 @@
     <item
         android:id="@+id/nav_timeline"
         android:icon="@android:drawable/ic_menu_today"
-        android:title="Timeline" />
+        android:title="Timeline"
+        android:enabled="true" />
 
     <item
         android:id="@+id/nav_analytics"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="Analytics" />
+        android:title="Analytics"
+        android:enabled="true" />
 
     <item
         android:id="@+id/nav_summary"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:title="Summary" />
+        android:title="Summary"
+        android:enabled="true" />
 
     <item
         android:id="@+id/nav_settings"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:title="Settings" />
-
+        android:title="Settings"
+        android:enabled="true" />
 </menu>
