--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,8 +17,10 @@
         <item name="android:colorBackground">@color/background</item>
         <item name="colorSurface">@color/surface</item>
 
-        <!-- Status bar color -->
+        <!-- In themes.xml, update the status bar color -->
         <item name="android:statusBarColor">@color/primary_dark</item>
+        <item name="android:navigationBarColor">@color/surface</item>
+        <item name="android:windowLightStatusBar">false</item>
 
         <!-- Customize your theme here -->
         <item name="android:textColorPrimary">@color/text_primary</item>
